--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
         <div class="about_hero">
             <div class="img">
                 <img src="../img/aboutus/banner.svg" alt="貓咪躍入畫作">
-                <p class="title">貓畫館之喵繪藝想：當貓咪躍入經典畫作</p>
+                <h1 class="title">貓畫館之喵繪藝想：當貓咪躍入經典畫作</h1>
             </div>
         </div>
         <section class="story_wrap">
@@ -163,6 +163,5 @@
                 <p class="copyright">&copy; 2025 緯育TibaMe_前端工程師專業技術養成班學員專題成果。本平台僅供學習與展示，非營利性質。若有侵權疑慮，請聯絡緯育TibaMe，將盡速處理。</p>
         </div>
     </div>
-
 </body>
 </html>
