--- a/pages/shop.html
+++ b/pages/shop.html
@@ -91,7 +91,7 @@
                     <a href="../pages/product-detail.html" class="product_card">
                         <img src="../img/noRadiusPrint/VanCat.png" alt="絕育剪耳自畫像">
                         <h3>絕育剪耳自畫像</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 1,080</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -101,7 +101,7 @@
                     <a href="../pages/product-detail.html" class="product_card">
                         <img src="../img/noRadiusPrint/Peralcat.png" alt="戴著鋼珠耳環的貓">
                         <h3>戴著鋼珠耳環的貓</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -111,7 +111,7 @@
                     <a href="../pages/product-detail.html" class="product_card">
                         <img src="../img/noRadiusPrint/yellingCat.png" alt="吶尼">
                         <h3>吶尼</h3>
-                        <div class="rate">⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★☆</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -121,7 +121,7 @@
                     <a href="../pages/product-detail.html" class="product_card">
                         <img src="../img/noRadiusPrint/dancingCat.png" alt="舞喵">
                         <h3>舞喵</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart" onclick="event.preventDefault()">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -130,7 +130,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/monaleeCat.png" alt="蒙娜麗喵的賊笑">
                         <h3>蒙娜麗喵的賊笑</h3>
-                        <div class="rate">⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★☆</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -139,7 +139,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/awakecat.png" alt="吵醒">
                         <h3>吵醒</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -148,7 +148,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/mirrorcat.png" alt="喵鏡">
                         <h3>喵鏡</h3>
-                        <div class="rate">⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★☆</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -157,7 +157,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/hugratcat.png" alt="抱著銀貂的貓">
                         <h3>抱著銀貂的貓</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 990</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -166,7 +166,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/masiaCat.png" alt="聖貓">
                         <h3>聖貓</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -175,7 +175,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/StreetCat.png" alt="回頭的浪貓">
                         <h3>回頭的浪貓</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -184,7 +184,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/sanCatFamily.png" alt="橡樹下的貓族">
                         <h3>橡樹下的貓族</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
@@ -193,7 +193,7 @@
                     <div class="product_card">
                         <img src="../img/noRadiusPrint/babyCats.png" alt="秋日逗貓圖">
                         <h3>秋日逗貓圖</h3>
-                        <div class="rate">⭐⭐⭐⭐⭐</div>
+                        <div class="rate">★★★★★</div>
                         <div class="price">NT$ 890</div>
                         <button class="cart">加入購物車
                             <img src="../img/icon/cart_white.png" alt="cart">
