--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="./css/layout.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Museum</title>
+    <title>Mewseum</title>
 </head>
 <body>
     <div class="header">
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="./img/logo_h.svg" alt="Museum_logo">
+                    <img src="./img/logo_h.svg" alt="Mewseum_logo">
                 </a>
             </div>
             <nav>
-                <ul>
+                <ul class="nav-menu">
                     <li><a href="./pages/about.html">喵繪藝想</a></li>
                     <li><a href="./pages/shop.html">畫作商店</a></li>
                     <li><a href="./pages/faq.html">FAQ</a></li>
@@ -35,15 +35,16 @@
                 <a href="./pages/cart.html">
                     <img src="./img/icon/cart.svg" alt="shoppingcart">
                 </a>
+                <button class="hamburger">☰</button>
             </div>
         </div>
     </div>
 
     <main>
         <section class="hero">
-            <div class="hero_img">
+            <!-- <div class="hero_img">
                 <img src="./img/banner.png" alt="banner">
-            </div>
+            </div> -->
             <div class="shop_cta">
                 <div class="text">
                 <p>在每一個凝視的瞬間，<br>感受貓與藝術交織的溫柔詩意。</p>
@@ -52,7 +53,6 @@
                     <a href="./pages/shop.html">
                         <div class="btn_wrapper">
                             <span class="btn_text">即刻啟程</span>
-                            <img src="./img/creamlabel.svg" alt="catpaw_label">
                         </div>
                     </a>
                 </div>
@@ -107,7 +107,6 @@
                 <div class="see_more_btn">
                     <a href="./pages/shop.html">
                     <span class="see_more_text">查看更多</span>
-                    <img src="./img/pinklabel.svg" alt="catpaw_label">
                     </a>
                 </div>            
             </div>
@@ -125,11 +124,9 @@
                         <p>我們相信，藝術不該只是博物館裡遙不可及的高牆。</p>
                         <p> 喵畫館 Mewseum，是一間以貓咪為靈感，<br>幽默改寫經典名畫的藝術小店。</p>
                         <p>我們用柔和的色彩、溫暖的靈魂與輕鬆的命名方式，<br>讓每幅畫都多了一點親切感。創立這個品牌，<br>是因為我們想把藝術帶回日常。</p>
-
                     <div class="about_btn">
                         <a href="./pages/about.html">
                         <span class="about_btn_text">進入喵繪藝想</span>
-                        <img src="./img/pinklabel.svg" alt="catpaw_label">
                         </a>
                     </div>            
                     </div>
@@ -147,7 +144,7 @@
                             <h3 class="title">辦公室裡的紓壓小秘訣！</h3>
                             <h4 class="name">上班族小綠</h4>
                             <h4 title="email">green.worker@example.com</h4>
-                            <div class="stars">⭐⭐⭐⭐</div>
+                            <div class="stars">★★★★☆</div>
                         </div>
                     </div>
                     <p class="comment"> 在辦公桌旁掛上這幅畫，每次工作到煩躁時看一眼，都被畫中寧靜的風景安撫了！真的讓枯燥的辦公室多了一份雅致和舒適感。期待未來有更多尺寸可以選擇，這樣就能佈置更多空間了！</p>
@@ -159,7 +156,7 @@
                             <h3 class="title">喵的！這藝術品太讚了！</h3>
                             <h4 class="name">貓奴阿哲</h4>
                             <h4 title="email">catlover.zhe@email.com</h4>
-                            <div class="stars">⭐⭐⭐⭐⭐</div>
+                            <div class="stars">★★★★★</div>
                         </div>
                     </div>
                     <p class="comment"> 一看到這些貓咪融入名畫的創意就忍不住下單了！實品比照片還可愛一百倍！擺在家裡整個質感都提升了，朋友來家裡都說超有趣！大推！</p>
@@ -171,7 +168,7 @@
                             <h3 class="title">送禮自用兩相宜！</h3>
                             <h4 class="name">小魚兒</h4>
                             <h4 title="email">happyfish77@othermail.net</h4>
-                            <div class="stars">⭐⭐⭐⭐</div>
+                            <div class="stars">★★★★☆</div>
                         </div>
                     </div>
                     <p class="comment">買來送給同樣是貓奴的閨蜜當生日禮物，她收到超喜歡！一直拍照炫耀！連我都想再買一幅放在自己房間了。包裝也很仔細，整體購物體驗很棒！</p>
@@ -183,7 +180,7 @@
                             <h3 class="title">超乎期待的精緻度！</h3>
                             <h4 class="name">藝術喵</h4>
                             <h4 title="email">art.meow@coolmail.org</h4>
-                            <div class="stars">⭐⭐⭐⭐⭐</div>
+                            <div class="stars">★★★★★</div>
                         </div>
                     </div>
                     <p class="comment">本來只是被有趣的點子吸引，沒想到畫作本身的質感也非常好，印刷很細膩，顏色也很飽和。看得出來賣家的用心！以後會持續關注你們的新作品！</p>
@@ -195,7 +192,7 @@
                             <h3 class="title">每天回家都被療癒！</h3>
                             <h4 class="name">懶貓咪</h4>
                             <h4 title="email">lazycat_zzz@fastmail.cc</h4>
-                            <div class="stars">⭐⭐⭐⭐</div>
+                            <div class="stars">★★★★☆</div>
                         </div>
                     </div>
                     <p class="comment">工作一整天回家看到這些可愛的貓咪畫作，心情都放鬆了！真的是很棒的居家裝飾，讓生活多了一點趣味和溫暖。希望未來能有更多不同風格的選擇！</p>
@@ -209,7 +206,7 @@
                     <p>訂閱 Mewseum 電子報，定期收到貓系新作、限時<br>貓毛優惠，偶爾還有喵店長寫信給你。</p>
                     <form>
                         <input type="email" placeholder="請輸入電子信箱">
-                        <button type="submit">接收貓毛</button>
+                        <button type="submit">訂閱</button>
                     </form>
                 </div>
                 <div class="newsletter_img">
@@ -271,6 +268,10 @@
                 <p class="copyright">&copy; 2025 緯育TibaMe_前端工程師專業技術養成班學員專題成果。本平台僅供學習與展示，非營利性質。若有侵權疑慮，請聯絡緯育TibaMe，將盡速處理。</p>
         </div>
     </div>
-
+    <script>
+        document.querySelector('.hamburger').addEventListener('click',() => {
+            document.querySelector('.nav-menu').classList.toggle('active')
+        });
+    </script>
 </body>
 </html>
