所有頁首頁尾完成RWD

--- a/index.html
+++ b/index.html
@@ -268,10 +268,6 @@
                 <p class="copyright">&copy; 2025 緯育TibaMe_前端工程師專業技術養成班學員專題成果。本平台僅供學習與展示，非營利性質。若有侵權疑慮，請聯絡緯育TibaMe，將盡速處理。</p>
         </div>
     </div>
-    <script>
-        document.querySelector('.hamburger').addEventListener('click',() => {
-            document.querySelector('.nav-menu').classList.toggle('active')
-        });
-    </script>
+    <script src="./js/hamburger.js"></script>
 </body>
 </html>
