--- a/pages/cart.html
+++ b/pages/cart.html
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <nav>
-                <ul>
+                <ul class="nav-menu">
                     <li><a href="../pages/about.html">喵繪藝想</a></li>
                     <li><a href="../pages/shop.html">畫作商店</a></li>
                     <li><a href="../pages/faq.html">FAQ</a></li>
@@ -35,6 +35,7 @@
                 <a href="../pages/cart.html">
                     <img src="../img/icon/cart.svg" alt="shoppingcart">
                 </a>
+                <button class="hamburger">☰</button>
             </div>
         </div>
     </div>
@@ -173,6 +174,6 @@
                 <p class="copyright">&copy; 2025 緯育TibaMe_前端工程師專業技術養成班學員專題成果。本平台僅供學習與展示，非營利性質。若有侵權疑慮，請聯絡緯育TibaMe，將盡速處理。</p>
         </div>
     </div>
-
+    <script src="../js/hamburger.js"></script>
 </body>
 </html>
