--- a/pages/faq.html
+++ b/pages/faq.html
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <nav>
-                <ul>
+                <ul class="nav-menu">
                     <li><a href="../pages/about.html">喵繪藝想</a></li>
                     <li><a href="../pages/shop.html">畫作商店</a></li>
                     <li><a href="../pages/faq.html">FAQ</a></li>
@@ -35,6 +35,7 @@
                 <a href="../pages/cart.html">
                     <img src="../img/icon/cart.svg" alt="shoppingcart">
                 </a>
+                <button class="hamburger">☰</button>
             </div>
         </div>
     </div>
@@ -137,5 +138,6 @@
         </div>
     </div>
     <script src="../js/faq.js"></script>
+    <script src="../js/hamburger.js"></script>
 </body>
 </html>
