--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
 
     <main>
         <section class="hero">
-            <!-- <div class="hero_img">
-                <img src="./img/banner.png" alt="banner">
-            </div> -->
             <div class="shop_cta">
                 <div class="text">
                 <p>在每一個凝視的瞬間，<br>感受貓與藝術交織的溫柔詩意。</p>
@@ -235,7 +232,7 @@
                 <div class="store">
                     <h3>門市資訊</h3>
                     <ul>
-                        <li>Mewseum 貓藝廊 (台北店)</li>
+                        <li>Mewseum 貓畫館 (台北店)</li>
                         <li>地址:台北市中山區貓咪大道101號</li>
                         <li><a href="#">更多門市</a></li>
                     </ul>
