--- a/pages/shop.html
+++ b/pages/shop.html
@@ -45,27 +45,27 @@
             <div class="category">
                 <button>
                     <div class="text">全部商品</div>
-                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
                 </button>
                 <button>
                     <div class="text">經典致敬系列</div>
-                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
                 </button>
                 <button>
                     <div class="text">宮廷喵</div>
-                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
                 </button>
                 <button>
                     <div class="text">英雄喵</div>
-                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
                 </button>
                 <button>
                     <div class="text">優雅喵</div>
-                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
                 </button>
                 <button>
                     <div class="text">文藝復興喵</div>
-                    <img src="../img/catpawlabelfornav.svg" alt="catpawlabel">
+                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
                 </button>
             </div>
         </aside>
