--- a/pages/shop.html
+++ b/pages/shop.html
@@ -43,30 +43,24 @@
     <div class="shop_layout">
         <aside class="sidebar">
             <div class="category">
-                <button>
-                    <div class="text">全部商品</div>
-                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
-                </button>
-                <button>
+                <a href="../pages/shop.html">
+                    <div class="text" >全部商品</div>
+                </a>
+                <a href="../pages/shop.html">
                     <div class="text">經典致敬系列</div>
-                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
-                </button>
-                <button>
+                </a>
+                <a href="../pages/shop.html">
                     <div class="text">宮廷喵</div>
-                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
-                </button>
-                <button>
+                </a>
+                <a href="../pages/shop.html">
                     <div class="text">英雄喵</div>
-                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
                 </button>
-                <button>
+                <a href="../pages/shop.html">
                     <div class="text">優雅喵</div>
-                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
-                </button>
-                <button>
+                </a>
+                <a href="../pages/shop.html">
                     <div class="text">文藝復興喵</div>
-                    <!-- <img src="../img/catpawlabelfornav.svg" alt="catpawlabel"> -->
-                </button>
+                </a>
             </div>
         </aside>
         <main class="product_area">
@@ -76,7 +70,7 @@
                 <nav class="breadcrumb">
                     <a href="../pages/shop.html">全部商品</a>
                     <span class="divider">›</span>
-                    <a href="../pages/shop.html">經典致敬系列</a>
+                    <span class="current">經典致敬系列</span>
                 </nav>
 
                 <div class="sort_select">
