--- a/pages/faq.html
+++ b/pages/faq.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/faq.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Museum</title>
+    <title>Mewseum</title>
 </head>
 <body>
     <div class="header">
