--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -57,7 +57,7 @@
             <p class="product_series">致敬貓系列</p>
             <h3 class="product_name">拿破貓</h3>
             <div class="rating">
-                <span class="stars">⭐⭐⭐⭐⭐</span>
+                <span class="stars">★★★★★</span>
                 <span class="reviews">(3)</span>
                 <span></span>
             </div>
@@ -118,37 +118,37 @@
                 <div class="product_card">
                     <img src="../img/noRadiusPrint/mirrorcat.svg" alt="喵鏡">
                     <h3>喵鏡</h3>
-                    <div class="rate">⭐⭐⭐⭐</div>
+                    <div class="rate">★★★★☆</div>
                     <div class="price">NT$ 990</div>
                     <button class="cart">加入購物車
-                        <img src="../img/icon/cutecart.svg" alt="cart">
+                        <img src="../img/icon/cart_white.png" alt="cart">
                     </button>
                 </div>
                 <div class="product_card">
                     <img src="../img/noRadiusPrint/hugratcat.svg" alt="抱著銀貂的貓">
                     <h3>抱著銀貂的貓</h3>
-                    <div class="rate">⭐⭐⭐⭐⭐</div>
+                    <div class="rate">★★★★★</div>
                     <div class="price">NT$ 990</div>
                     <button class="cart">加入購物車
-                        <img src="../img/icon/cutecart.svg" alt="cart">
+                        <img src="../img/icon/cart_white.png" alt="cart">
                     </button>
                 </div>
                 <div class="product_card">
                     <img src="../img/noRadiusPrint/masiaCat.svg" alt="聖貓">
                     <h3>聖貓</h3>
-                    <div class="rate">⭐⭐⭐⭐⭐</div>
+                    <div class="rate">★★★★★</div>
                     <div class="price">NT$ 890</div>
                     <button class="cart">加入購物車
-                        <img src="../img/icon/cutecart.svg" alt="cart">
+                        <img src="../img/icon/cart_white.png" alt="cart">
                     </button>
                 </div>
                 <div class="product_card">
                     <img src="../img/noRadiusPrint/StreetCat.svg" alt="回頭的浪貓">
                     <h3>回頭的浪貓</h3>
-                    <div class="rate">⭐⭐⭐⭐⭐</div>
+                    <div class="rate">★★★★★</div>
                     <div class="price">NT$ 890</div>
                     <button class="cart">加入購物車
-                        <img src="../img/icon/cutecart.svg" alt="cart">
+                        <img src="../img/icon/cart_white.png" alt="cart">
                     </button>
                 </div>
             </div>
