--- a/index.html
+++ b/index.html
@@ -283,9 +283,30 @@
                         breakpoint: 768,
                         settings: {
                             arrows: false,
-                            slidesToShow: 1,
+                            slidesToShow: 2,
+                            slidesToScroll: 1,
                             centerMode: true,
                             centerPadding: '40px'
+                        }
+                    },
+                    {
+                        breakpoint: 576,
+                        settings: {
+                            arrows: false,
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            centerMode: true,
+                            centerPadding: '20px'
+                        }
+                    },
+                    {
+                        breakpoint: 360,
+                        settings: {
+                            arrows: false,
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            centerMode: true,
+                            centerPadding: '10px'
                         }
                     }
                 ]
